--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/feedhenry-templates/appforms-datasources-mongodb#readme",
   "dependencies": {
-    "fh-mbaas-api": "^5.0.0",
+    "fh-mbaas-api": "5.6.0-227",
     "request": "~2.40.0",
     "body-parser": "~1.0.2",
     "express": "~4.0.0",
