--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "body-parser": "~1.0.2",
     "express": "~4.0.0",
     "cors": "~2.2.0",
-    "underscore": "1.7.0"
+    "underscore": "1.7.0",
+    "async": "1.5.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "latest",
