--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/feedhenry-templates/appforms-datasources-mongodb#readme",
   "dependencies": {
-    "fh-mbaas-api": "5.10.0",
+    "fh-mbaas-api": "5.11.0",
     "request": "~2.40.0",
     "body-parser": "~1.0.2",
     "express": "~4.0.0",
@@ -30,7 +30,7 @@
     "grunt-concurrent": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-env": "~0.4.1",
-    "grunt-node-inspector": "~0.1.5",
+    "grunt-node-inspector": ">=0.2.0",
     "grunt-nodemon": "0.2.0",
     "grunt-open": "~0.2.3",
     "grunt-plato": "~1.0.0",
