--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/feedhenry-templates/appforms-datasources-mongodb#readme",
   "dependencies": {
     "fh-mbaas-api": "6.1.3",
-    "request": "~2.40.0",
+    "request": "2.79.0",
     "body-parser": "~1.0.2",
     "express": "~4.0.0",
     "cors": "~2.2.0",
