--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/feedhenry-templates/appforms-datasources-mongodb#readme",
   "dependencies": {
-    "fh-mbaas-api": "6.1.5",
+    "fh-mbaas-api": "^6.1.6",
     "request": "2.79.0",
     "body-parser": "~1.0.2",
     "express": "~4.0.0",
