add README instruction on running unit test

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "application.js",
   "scripts": {
     "start": "node application.js",
-    "test": "grunt test"
+    "test": "grunt test",
+    "coverage": "grunt coverage"
   },
   "repository": {
     "type": "git",
