--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "~4.0.0",
     "cors": "~2.2.0",
     "underscore": "1.7.0",
-    "async": "1.5.0"
+    "async": "1.5.0",
+    "fh-js-sdk": "~3.0.2"
   },
   "devDependencies": {
     "grunt": "^0.4.0",
